все зробив та пішов їсти

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <script type="module" src="./js/vars.js" ></script>
     <script type="module" src="./js/vars2.js" ></script>
+    <script type="module" src="./js/vars3.js"></script>
+    <script type="module" src="./js/vars4.js"></script>
+    <script type="module" src="./js/vars5.js"></script>
 </body>
 </html>
